objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>L2I_Ad_Ops_Notes__c</fullName>
        <formula>Order.Opportunity.L2I_Ad_Ops_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ad Ops Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_AdditionalInfo1__c</fullName>
        <label>Additional Info 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_AdditionalInfo2__c</fullName>
        <label>Additional Info 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Additional_AR_Invoice_Notes__c</fullName>
        <label>Additional AR Invoice Notes</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Advertiser_ID__c</fullName>
        <formula>Order.Opportunity.L2I_Advertiser_Name__r.L2I_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertiser ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Advertiser_Name__c</fullName>
        <formula>Order.Opportunity.L2I_Advertiser_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertiser Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Airline_Code__c</fullName>
        <formula>SBQQ__QuoteLine__r.L2I_Account__r.L2I_Airline_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Airline_Name__c</fullName>
        <formula>SBQQ__QuoteLine__r.L2I_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_CCC_Prefix__c</fullName>
        <formula>CASE(  L2I_Sub_Category_2__c , 
&#39;eX2&#39;, &#39;A&#39;, 
&#39;eXLite&#39;, &#39;L&#39;, 
&#39;eX1&#39;, &#39;H&#39;, 
&#39;eX3&#39;, &#39;G&#39;, 
&#39;NEXT&#39;, &#39;Z&#39;, 
&#39;eXK&#39;, &#39;J&#39;, 
&#39;eXO&#39;, &#39;Y&#39;, 
&#39;eXW&#39;, &#39;W&#39;, 
&#39;DMPES&#39;, &#39;3&#39;, 
&#39;S3K&#39;, &#39;5&#39;, 
&#39;eFX&#39;, &#39;C&#39;, 
&#39;S&#39;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2I_CCC_Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_CCC_Suffix__c</fullName>
        <label>CCC Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WI</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>EX</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>ZT</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>PH</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>BUNDLE PRODUCT</fullName>
                </value>
                <value>
                    <fullName>ZZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_CCC__c</fullName>
        <formula>IF(
ISPICKVAL(L2I_Sub_Category_2__c, &quot;MCS&quot;), L2I_Program_Number__c &amp; TEXT(PricebookEntry.Product2.L2I_CCC_Suffix__c),
 L2I_CCC_Prefix__c  &amp; Order.Account.L2I_Operator_Number__c &amp; &quot;MIXED&quot; &amp; TEXT(PricebookEntry.Product2.L2I_CCC_Suffix__c)
)</formula>
        <label>CCC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Case_Ship_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Ship to Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Case Ship to Customer)</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Comments__c</fullName>
        <label>Comments</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Connecctivity_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually(1)</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual(2)</fullName>
                </value>
                <value>
                    <fullName>Tri-Annual(3)</fullName>
                </value>
                <value>
                    <fullName>Quarterly(4)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Connected_User_Type__c</fullName>
        <label>Connected User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average Users per Flight</fullName>
                </value>
                <value>
                    <fullName>Service Level</fullName>
                </value>
                <value>
                    <fullName>MB Definition</fullName>
                </value>
                <value>
                    <fullName>PAC RevShare Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Customer_PO_Line__c</fullName>
        <label>Customer PO Line</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Customer_PO_Request_Date__c</fullName>
        <label>Customer PO Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Default_Shipping_Org__c</fullName>
        <formula>Product2.L2I_Default_Shipping_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Shipping Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Delivery_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Schedule</label>
        <referenceTo>L2I_DSH__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_End_Date__c</fullName>
        <formula>Order.Opportunity.L2I_Campaign_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_ID__c</fullName>
        <inlineHelpText>Twin Field, originating from the product2</inlineHelpText>
        <label>Feature ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_Name__c</fullName>
        <inlineHelpText>Twin Field, originating from the product2</inlineHelpText>
        <label>Feature Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Frequency_Cap__c</fullName>
        <formula>Order.Opportunity.L2I_Frequency_Cap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly (12)</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly (6)</fullName>
                </value>
                <value>
                    <fullName>Quarterly (4)</fullName>
                </value>
                <value>
                    <fullName>Tri-Annually (3)</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual (2)</fullName>
                </value>
                <value>
                    <fullName>Annually (1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Goal_Type__c</fullName>
        <label>Goal Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Has_Rate_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to identify whether the Order Item has a custom Rate Schedule associated with it</description>
        <inlineHelpText>Boolean to identify whether the Order Item has a custom Rate Schedule associated with it</inlineHelpText>
        <label>Has Rate Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_IncludedUsage__c</fullName>
        <label>Included Usage Qty (MB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Installation_Location__c</fullName>
        <formula>IF(ISPICKVAL(L2I_Sub_Category_2__c, &quot;MCS&quot;), &quot;SWD&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_IntegrationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Inventory_Item_ID__c</fullName>
        <label>Inventory Item ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Is_there_an_Integration_Effort__c</fullName>
        <label>Is there an Integration Effort?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (1)</fullName>
                </value>
                <value>
                    <fullName>No (0)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_LF_Software_Supply_Date__c</fullName>
        <label>LF Software Supply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Line_ExternalId__c</fullName>
        <label>Line ExternalId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Line_Type_ID__c</fullName>
        <label>Line Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Max_Impressions__c</fullName>
        <formula>Order.Opportunity.L2I_Max_Impressions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Megabyte_Definition__c</fullName>
        <label>Megabyte Definition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>1024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Minimum_GB_Per_Tail__c</fullName>
        <label>Minimum GB Per Tail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Model_Type__c</fullName>
        <label>Model Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average GB per Tail with Overage</fullName>
                </value>
                <value>
                    <fullName>Average GB per Tail - Tiered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Next_Threshold_Percentage__c</fullName>
        <description>Percentage for the next billing event. Used for tracking consumption milestone in addition to a time based billing</description>
        <inlineHelpText>Percentage for the next billing event. Used for tracking consumption milestone in addition to a time based billing</inlineHelpText>
        <label>Next Threshold Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_On_Doc_Delivery_Day__c</fullName>
        <label>On Doc Delivery Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_On_Dock_Delivery_Date_c__c</fullName>
        <label>On Dock Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Opportunity_Name__c</fullName>
        <formula>Order.Opportunity.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Oracle_Sales_Order_ID__c</fullName>
        <label>Oracle Sales Order ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Order_Process__c</fullName>
        <formula>Text(Order.L2I_Order_Process__c)</formula>
        <label>Order Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Order_Type_Context__c</fullName>
        <label>Order Type Context</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Order_Type_ID__c</fullName>
        <label>Order Type ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_PACRevSharePerc__c</fullName>
        <label>PAC RevShare Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Part_Number__c</fullName>
        <label>Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Per_Aircraft_Proration__c</fullName>
        <description>Defines how per aircraft per month fees are treated</description>
        <label>Per Aircraft Proration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Price_List_ID__c</fullName>
        <label>Price List ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Pricing_Model__c</fullName>
        <formula>Text(Order.Opportunity.L2I_Pricing_Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_ProductName__c</fullName>
        <formula>IF(!ISBLANK(SBQQ__QuoteLine__c), SBQQ__QuoteLine__r.L2I_ProductName_Display__c, Product2.Name)</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Billable_MB__c</fullName>
        <label>Product Billable MB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Code_Int__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__ProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code Int</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Product_Code__c</fullName>
        <formula>IF(!ISBLANK(SBQQ__QuoteLine__c), SBQQ__QuoteLine__r.L2I_ProductCode_Display__c, Product2.ProductCode)</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Program_Number__c</fullName>
        <formula>IF(
ISPICKVAL(L2I_Sub_Category_2__c, &quot;MCS&quot;), Order.L2I_Program_Number__c,
&quot;NA&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Rate_Schedule_JSON__c</fullName>
        <description>Twins from Quote Line. Capture the Rate Schedule Tiers from the Quote Line Rate Schedule JSON field.</description>
        <inlineHelpText>Twins from Quote Line. Capture the Rate Schedule Tiers from the Quote Line Rate Schedule JSON field.</inlineHelpText>
        <label>L2I Rate Schedule JSON</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Reference_PO_Request_Date__c</fullName>
        <label>Reference PO Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Reference_PO__c</fullName>
        <label>Reference PO</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Renewal_Notification_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Notification Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Renewal_Notification_Percent__c</fullName>
        <defaultValue>0.75</defaultValue>
        <label>Renewal Notification Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_RevShare__c</fullName>
        <label>PAC RevShare %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_RunningDailyUsageAverage__c</fullName>
        <inlineHelpText>Calculated field that averages the usage of the last n days. This field is used to forecast the burndown of the TeraByte connectivity plan</inlineHelpText>
        <label>Running Daily Usage Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Service_Activation_Type__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.L2I_Service_Activation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Activation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Ship_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value in Ship to Location does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>L2I_Site__c.PT_AccountId__c</field>
                <operation>equals</operation>
                <valueField>$Source.L2I_Case_Ship_to_Customer__c</valueField>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Site_Use_Code__c</field>
                <operation>equals</operation>
                <value>Ship_To</value>
            </filterItems>
            <filterItems>
                <field>L2I_Site__c.L2I_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_Site__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Shipment_Type__c</fullName>
        <label>Shipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physical</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Source_OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated for shadow Order Products to denote what their source order product is.</description>
        <inlineHelpText>Populated for shadow Order Products to denote what their source order product is.</inlineHelpText>
        <label>L2I Source Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Shadow Order Products (Source Order Product)</relationshipLabel>
        <relationshipName>Shadow_OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Special_QA_Inspection__c</fullName>
        <label>Special QA Inspection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airbus Source</fullName>
                </value>
                <value>
                    <fullName>Airbus Yellow Tag</fullName>
                </value>
                <value>
                    <fullName>Any/PMAConformity</fullName>
                </value>
                <value>
                    <fullName>Boeing FAA 8130-3</fullName>
                </value>
                <value>
                    <fullName>Boeing Source</fullName>
                </value>
                <value>
                    <fullName>COC</fullName>
                </value>
                <value>
                    <fullName>COC, CX, Wt. Guarantee</fullName>
                </value>
                <value>
                    <fullName>CONFIGURE PER THE -501 SHIP CONFIGURATION ITEM</fullName>
                </value>
                <value>
                    <fullName>FAA 8130-3 Tag</fullName>
                </value>
                <value>
                    <fullName>FAA Conformity</fullName>
                </value>
                <value>
                    <fullName>FAA 8130-3, CX Wt Guar</fullName>
                </value>
                <value>
                    <fullName>FAA Conform;CX, WtGuar</fullName>
                </value>
                <value>
                    <fullName>Form 1 Appr Data</fullName>
                </value>
                <value>
                    <fullName>Form1 NonAppr Data</fullName>
                </value>
                <value>
                    <fullName>Highest Cert Avail.</fullName>
                </value>
                <value>
                    <fullName>Highest Cert and Cathay Wt. Guarantee</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>N/A; CX Wt Guarantee</fullName>
                </value>
                <value>
                    <fullName>PMA A/C Specific</fullName>
                </value>
                <value>
                    <fullName>PMA Any A/C</fullName>
                </value>
                <value>
                    <fullName>PMA Any Airbus A/C</fullName>
                </value>
                <value>
                    <fullName>PMA Any Boeing A/C</fullName>
                </value>
                <value>
                    <fullName>Uses/SvcbleRTS8130-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Start_Date__c</fullName>
        <formula>Order.Opportunity.L2I_Campaign_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Sub_Category3__c</fullName>
        <label>Sub Category 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Sub_Category_1__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Sub_Category_2__c</fullName>
        <label>Sub Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Sub_Category_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_System_Type__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2K</fullName>
                </value>
                <value>
                    <fullName>3K/3Ki</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>DMPES</fullName>
                </value>
                <value>
                    <fullName>eFX</fullName>
                </value>
                <value>
                    <fullName>eX1</fullName>
                </value>
                <value>
                    <fullName>eX2</fullName>
                </value>
                <value>
                    <fullName>eX3</fullName>
                </value>
                <value>
                    <fullName>eXK</fullName>
                </value>
                <value>
                    <fullName>eXLite</fullName>
                </value>
                <value>
                    <fullName>eXO</fullName>
                </value>
                <value>
                    <fullName>eXW</fullName>
                </value>
                <value>
                    <fullName>Next</fullName>
                    <label>NEXT</label>
                </value>
                <value>
                    <fullName>GCS</fullName>
                </value>
                <value>
                    <fullName>3K</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Threshold_Step__c</fullName>
        <description>Step value to add to the Next Threshold Percentage when the existing milestone is reached.</description>
        <label>Threshold Step</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Usage_Consumed__c</fullName>
        <description>Percentage of Total Usage divided by Included Usage</description>
        <formula>IF(
 ISBLANK(L2I_IncludedUsage__c),NULL,
   L2I_Total_Usage__c / L2I_IncludedUsage__c
)</formula>
        <inlineHelpText>Percentage of Total Usage divided by Included Usage</inlineHelpText>
        <label>Total Usage Consumed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Total_Usage__c</fullName>
        <description>Aggregated usage across all billing periods for this order.</description>
        <inlineHelpText>Aggregated usage across all billing periods for this order.</inlineHelpText>
        <label>Total Usage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_UOM__c</fullName>
        <label>Mediation UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Mediation_UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Usage_Type__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passenger</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
                <value>
                    <fullName>Whitelist</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>iPass</fullName>
                </value>
                <value>
                    <fullName>Boingo</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>